--- a/.env
+++ b/.env
@@ -1,7 +1,8 @@
-MONGO_URI=mongodb://localhost:27017/contactUs/contacts
 PORT=5000
 
 
 JWT_SECRET=qwertyuioplkjhgfdsa09xcvbnm
 
 console.log("JWT_SECRET:", process.env.JWT_SECRET);
+
+MONGO_URI=mongodb+srv://madhurk:ii18OXuYNfTgAp4u@cluster0.bu5fd.mongodb.net/
