--- a/.env
+++ b/.env
@@ -5,4 +5,4 @@ JWT_SECRET=qwertyuioplkjhgfdsa09xcvbnm
 
 console.log("JWT_SECRET:", process.env.JWT_SECRET);
 
-MONGO_URI=mongodb+srv://madhurk:ii18OXuYNfTgAp4u@cluster0.bu5fd.mongodb.net/
+MONGO_URI=mongodb+srv://madhurk:ii18OXuYNfTgAp4u@cluster0.bu5fd.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
