--- a/.env
+++ b/.env
@@ -5,4 +5,4 @@ JWT_SECRET=qwertyuioplkjhgfdsa09xcvbnm
 
 console.log("JWT_SECRET:", process.env.JWT_SECRET);
 
-MONGO_URI=mongodb+srv://pavan:admin123@cluster0.bu5fd.mongodb.net/ContactUsDB?retryWrites=true&w=majority&tls=true
+MONGO_URI=mongodb+srv://pavan:admin123@cluster0.bu5fd.mongodb.net/ContactDB?retryWrites=true&w=majority&tls=true
